Fix: text alignment for About Me text

--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -193,6 +193,7 @@ header {
             h3 {
                 font-size: 24px;
                 margin-bottom: 15px;
+                text-align: center;
             }
             span {
                 color: var(--color-secondary);
@@ -200,6 +201,7 @@ header {
             p {
                 font-size: 16px;
                 line-height: 25px;
+                text-align: justify;
             }
         }
     }
